index.html emits color and brightness socket events

--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,13 @@
 	<link rel="stylesheet" href="style.css">
   </head>
   <body>
-  <input type="range" id= "inputSliderBrightness" min="0" max="255" value="50" step="1" oninput="showValue(this.value)" />
+  <input type="range" id= "inputSliderBrightness" min="0" max="255" value="50" step="1" oninput="showValueBrightness(this.value)" />
 <br><br><span id="outputTextBrightness">50</span>
-  <input type="range" id= "inputSliderRed" min="0" max="255" value="50" step="1" oninput="showValue(this.value)" />
+  <input type="range" id= "inputSliderRed" min="0" max="255" value="50" step="1" oninput="showValueRed(this.value)" />
 <br><br><span id="outputTextRed">50</span>
-  <input type="range" id= "inputSliderGreen" min="0" max="255" value="50" step="1" oninput="showValue(this.value)" />
+  <input type="range" id= "inputSliderGreen" min="0" max="255" value="50" step="1" oninput="showValueGreen(this.value)" />
 <br><br><span id="outputTextGreen">50</span>
-  <input type="range" id= "inputSliderBlue" min="0" max="255" value="50" step="1" oninput="showValue(this.value)" />
+  <input type="range" id= "inputSliderBlue" min="0" max="255" value="50" step="1" oninput="showValueBlue(this.value)" />
 <br><br><span id="outputTextBlue">50</span>
 
 
