--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
 <body>
   <input type="range" id= "inputSliderBrightness" min="0" max="255" value="50" step="1" oninput="showValueBrightness(this.value)" />
   <br><span id="outputTextBrightness">50</span><br><br>
+  <input type="range" id= "inputSliderRadius" min="0" max="100" value="50" step="1" oninput="showValueRadius(this.value)" />
+  <br><span id="outputTextRadius">50</span><br><br>
 
   <br><div id="html5DIV">
     <h3>LED Color Picker</h3>
@@ -32,6 +34,11 @@
     {
       document.getElementById("outputTextBrightness").innerHTML=newValue;
       socket.emit('brightness', { value: newValue });
+    }
+    function showValueRadius(newValue)
+    {
+      document.getElementById("outputTextRadius").innerHTML=newValue;
+      socket.emit('radius', { value: newValue });
     }
     function hexToRgb(hex) {
       var result = /^#?([a-f\d]{2})([a-f\d]{2})([a-f\d]{2})$/i.exec(hex);
