--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,9 @@
 
   <script type="text/javascript">
   var socket = io.connect();
+  var rtime;
+  var timeout = false;
+  var delta = 2;
 
   function setColor()
   {
@@ -38,7 +41,21 @@
   function showValueRadius(newValue)
   {
     document.getElementById("outputTextRadius").innerHTML=newValue;
-    socket.emit('radius', { value: newValue });
+    rtime = new Date();
+    if (timeout === false) {
+      timeout = true;
+      setTimeout(resizeend, delta);
+    }
+  }
+
+  function resizeend() {
+    if (new Date() - rtime < delta) {
+      setTimeout(resizeend, delta);
+    } else {
+      timeout = false;
+
+      socket.emit('radius', { value: document.getElementById("outputTextRadius").innerHTML });
+    }
   }
 
   function hexToRgb(hex) {
