--- a/public/index.html
+++ b/public/index.html
@@ -10,25 +10,25 @@
 <body>
   <br>
   <input type="range" id= "inputSliderBrush" min="1" max="3" value="1" step="1" oninput="showValueBrush(this.value)" />
-  <br><span id="outputTextBrush">50</span><br><br>
+  <br><h3>Brush: </h3><span id="outputTextBrush">1</span><br><br>
 
   <input type="range" id= "inputSliderBrightness" min="0" max="255" value="50" step="1" oninput="showValueBrightness(this.value)" />
-  <br><span id="outputTextBrightness">50</span><br>
+  <br><h3>Brightness: </h3><span id="outputTextBrightness">50</span><br>
   <br>
   <input type="range" id= "inputSliderPressure" min="0" max="100" value="50" step="1" oninput="showValuePressure(this.value)" />
-  <br><span id="outputTextPressure">50</span><br><br>
+  <br><h3>Pressure: </h3><span id="outputTextPressure">50</span><br><br>
 
   <br>
   <input type="range" id= "inputSliderRed" min="0" max="255" value="50" step="1" oninput="showValueRed(this.value)" />
-  <br><span id="outputTextRed">50</span><br><br>
+  <br><h3>Red: </h3><span id="outputTextRed">50</span><br><br>
 
   <br>
   <input type="range" id= "inputSliderGreen" min="0" max="255" value="50" step="1" oninput="showValueGreen(this.value)" />
-  <br><span id="outputTextGreen">50</span><br><br>
+  <br><h3>Green: </h3><span id="outputTextGreen">50</span><br><br>
 
   <br>
   <input type="range" id= "inputSliderBlue" min="0" max="255" value="50" step="1" oninput="showValueBlue(this.value)" />
-  <br><span id="outputTextBlue">50</span><br><br>
+  <br><h3>Blue: </h3><span id="outputTextBlue">50</span><br><br>
 
   <br><div id="html5DIV">
     <h3>LED Color Picker</h3>
